--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,19 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(nanovg VERSION 0.1.0)
 
-add_compile_definitions(NANOVG_GLEW)
-add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
-add_compile_definitions(DEMO_MSAA)
-
-add_library(nanovg src/nanovg.c src/nanovg.h)
-target_include_directories(nanovg PUBLIC src)  
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
+
+# global settings 
+add_compile_definitions(NANOVG_GLEW)
+add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
+add_compile_definitions(DEMO_MSAA) 
+add_compile_definitions(NANOVG_EXAMPLE_FOLDER="../../example/")  # path for fonts and images
+set(NANOVG_GLES OFF) 
+
+add_library(nanovg src/nanovg.c src/nanovg.h)
+target_include_directories(nanovg PUBLIC src)  
 
 
 add_executable(example_fbo example/example_fbo.c  example/demo.c  example/perf.c )
@@ -28,3 +32,4 @@ if(NANOVG_GLES)
     add_executable(example_gles3 example/example_gles3.c  example/demo.c  example/perf.c )
     target_link_libraries(example_gles3 nanovg ${CONAN_LIBS})
 endif()
+
